[package]
name = "is-nice"
version = "0.0.69"
edition = "2021"
description = "Tells you whether or not a string is nice."
license = "MIT"
repository = "https://github.com/MakotoE/is-nice"

[lib]
name = "is_nice"

[[bin]]
name = "is-nice"
path = "src/main.rs"

[dependencies]
regex = "1.7.1"
once_cell = "1.17.1"

[dev-dependencies]
rstest = "0.17.0"